--- a/paper-diffNotes.bib
+++ b/paper-diffNotes.bib
@@ -1,11 +1,12 @@
-@FOOTNOTE{Note1,key="Note1",note="The \protect \texttt  {yaq}{} protocol is fully specified by the set of accepted \protect \texttt  {yaq}{} Enhancement Proposals at https://yeps.yaq.fyi/"}
-@FOOTNOTE{Note2,key="Note2",note="\protect \texttt  {yaqc} available on PyPI at https://pypi.org/project/yaqc/"}
-@FOOTNOTE{Note3,key="Note3",note="\protect \texttt  {yaqc-qtpy} available on PyPI at https://pypi.org/project/yaqc-qtpy/"}
-@FOOTNOTE{Note4,key="Note4",note="\protect \texttt  {yaqc-bluesky} available on PyPI at https://pypi.org/project/yaqc-bluesky/"}
-@FOOTNOTE{Note5,key="Note5",note="\protect \texttt  {yaqd-core-python} available on PyPI at https://pypi.org/project/yaqd-core"}
-@FOOTNOTE{Note6,key="Note6",note="\protect \texttt  {yaq-traits} available on PyPI at https://pypi.org/project/yaq-traits"}
-@FOOTNOTE{Note7,key="Note7",note="\protect \texttt  {yaqd-brooks-mfc-gf} source code available on GitHub at \protect \texttt  {https://github.com/yaq-project/yaqd-brooks/}"}
-@FOOTNOTE{Note8,key="Note8",note="See https://yaq.fyi/daemons/ and https://yaq.fyi/hardware/ for living lists of all \protect \texttt  {yaq}{} daemons and supported hardware, respectively."}
-@FOOTNOTE{Note9,key="Note9",note="\protect \texttt  {yaqd-fakes} available on PyPI at https://pypi.org/project/yaqd-fakes/"}
+@FOOTNOTE{Note1,key="Note1",note="see Supplementary Material for a full description of the name \protect \texttt  {yaq}{}"}
+@FOOTNOTE{Note2,key="Note2",note="The \protect \texttt  {yaq}{} protocol is fully specified by the set of accepted \protect \texttt  {yaq}{} Enhancement Proposals at https://yeps.yaq.fyi/"}
+@FOOTNOTE{Note3,key="Note3",note="\protect \texttt  {yaqc} available on PyPI at https://pypi.org/project/yaqc/"}
+@FOOTNOTE{Note4,key="Note4",note="\protect \texttt  {yaqc-qtpy} available on PyPI at https://pypi.org/project/yaqc-qtpy/"}
+@FOOTNOTE{Note5,key="Note5",note="\protect \texttt  {yaqc-bluesky} available on PyPI at https://pypi.org/project/yaqc-bluesky/"}
+@FOOTNOTE{Note6,key="Note6",note="\protect \texttt  {yaqd-core-python} available on PyPI at https://pypi.org/project/yaqd-core"}
+@FOOTNOTE{Note7,key="Note7",note="\protect \texttt  {yaq-traits} available on PyPI at https://pypi.org/project/yaq-traits"}
+@FOOTNOTE{Note8,key="Note8",note="\protect \texttt  {yaqd-brooks-mfc-gf} source code available on GitHub at \protect \texttt  {https://github.com/yaq-project/yaqd-brooks/}"}
+@FOOTNOTE{Note9,key="Note9",note="See https://yaq.fyi/daemons/ and https://yaq.fyi/hardware/ for living lists of all \protect \texttt  {yaq}{} daemons and supported hardware, respectively."}
+@FOOTNOTE{Note10,key="Note10",note="\protect \texttt  {yaqd-fakes} available on PyPI at https://pypi.org/project/yaqd-fakes/"}
 @CONTROL{REVTEX42Control}
 @CONTROL{aip41Control,pages="1",title="0"}
